# CARDIAX

./: .gitignore  404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
api/main_functionality/: index.html
api/mesh_generation/: index.html
api/overview/: index.html
api/post_processing/: index.html
demos/input_file/: cube_demo.yaml  run.py
demos/spring_bcs/: cube_demo.yaml  run.py
docs/api/: mesh_generation.md
docs/tutorials/Introductory/NeoHookean/: neohookean.md  neohookean_00.md  neohookean_01.md  neohookean_02.md  neohookean_03.md
docs/tutorials/Introductory/Poisson/: poisson_00.md  poisson_01.md  poisson_02.md  poisson_03.md  poisson_04.md
limitations/: index.html
search/: search_index.json
src/cardiax/: __init__.py  _fe.py  _internal.py  _problem.py  utils.py
src/cardiax/Lagrange/: fe.py  generate_mesh.py  post_process.py
src/cardiax/PDEs/Mechanics/Hyperelasticity/: Hao_active.py  Hao_passive.py  MooneyRivlin.py  NeoHookean.py
src/cardiax/input_file/: config.py  input_file.py  input_file_helper.py  utils.py
src/cardiax/preconditioners/: _preconditioners.py
src/cardiax/solvers/: newton.py
src/cardiax/time_integrators/: time_integrators.py
test/benchmarks/hyperelastic_PS/: test_hyperelastic_PS.py
test/benchmarks/hyperelastic_SS/: test_hyperelastic_SS.py
test/benchmarks/input_file/: inputs.yaml  test_input_file.py
test/benchmarks/linear_poisson/: test_linear_poisson.py
test/unittests/: test_assembly.py  test_surface_kernel.py
tutorials/Advanced/dynamic_problems/: index.html
tutorials/Advanced/parameter_estimation/: index.html
tutorials/Cardiac_Modeling/LDRBM/: example.py  index.html
tutorials/Cardiac_Modeling/monodomain/: index.html
tutorials/Cardiac_Modeling/myocardium/: index.html
tutorials/Introductory/NeoHookean/neohookean_00/: index.html
tutorials/Introductory/NeoHookean/neohookean_01/: index.html
tutorials/Introductory/NeoHookean/neohookean_02/: index.html
tutorials/Introductory/NeoHookean/neohookean_03/: index.html
tutorials/Introductory/Poisson/poisson_00/: index.html
tutorials/Introductory/Poisson/poisson_01/: index.html
tutorials/Introductory/Poisson/poisson_02/: index.html
tutorials/Introductory/Poisson/poisson_03/: index.html
tutorials/Introductory/Poisson/poisson_04/: index.html
tutorials/Introductory/neohookean/: dirichlet_cube.py  dirichlet_many.py  example.py  live_traction_cube.py  traction_beam.py
tutorials/Introductory/poisson/: anisotropic.py  boundary_integrals.py  combined.py  isotropic.py
tutorials/cardiax_code_overview/: index.html
